examples/nginx/app-repo/k8s/app_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio.io/rev: asm-managed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: nginx-virtualservice
    namespace: nginx
spec:
    hosts:
    - "nginxservice.endpoints.arch001.cloud.goog"
    gateways:
    - asm-ingress/asm-ingressgateway
    http:
    - route:
      - destination:
          host: nginx
          port:
            number: 80
