examples/nginx/app-repo/k8s/vs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    istio.io/rev: asm-managed
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: nginx-virtualservice
    namespace: nginx
spec:
    hosts:
    - "nginxservice.endpoints.arch001.cloud.goog"
    gateways:
    - asm-ingress/asm-ingressgateway
    http:
    - route:
      - destination:
          host: nginx
          port:
            number: 80
